# Pawnote

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  Package.swift  README.md  analysis_options.yaml  build.gradle.kts  eslint.config.js  package.json  pnpm-lock.yaml  pubspec.yaml  settings.gradle.kts  tsconfig.json  tsup.config.ts
.github/: FUNDING.yml
.github/workflows/: deploy-docs.yml  publish.yml
Tests/PawnoteTests/: PawnoteTests.swift
docs/: CNAME  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs  typedoc.json
example/: authenticate.dart
examples/: .env.example  README.md  _credentials.ts  account.ts  acknowledge-news-information.ts  assignment-remove-file.ts  assignment-status.ts  assignment-upload-file.ts  assignments.ts  attendance.ts  authenticate-and-token.ts  authenticate-pin.ts  classes.ts  custom-fetcher.ts  discussions.ts  evaluations.ts  frequency.ts  geolocation.ts  gradebook-url.ts  gradebook.ts  grades-overview.ts  grades-report.ts  grades.ts  holidays.ts  homework-remove-upload.ts  homework-upload.ts  homework.ts  instance-information.ts  instance.ts  lessons.ts  mark-discussion-as-read.ts  menus.ts  news.ts  notebook.ts  periods.ts  presence.ts  queue-showcase.ts  resources.ts  student-information.ts  timetable.ts  (+1 more)
examples/authenticate/: Cargo.toml
examples/authentication/: parent.ts  pin.ts  student.ts  teacher.ts
examples/dicussions/: create.ts  send.ts
examples/discussions/: clear-all-draft.ts  create-draft.ts  create.ts  creation-recipients.ts  list.ts  manage.ts  mark-as-read.ts  read-recipients.ts  send-all-draft.ts  send.ts  update-draft.ts
examples/homepage/: student.ts
examples/javascript/: README.md  authenticate.mts  authenticate.ts  geolocation-instances-nearby.cjs  geolocation-instances-nearby.mts  geolocation-instances-nearby.ts  instance-information.mts  instance-information.ts  package.json  pnpm-lock.yaml
examples/news/: acknowledge-information.ts  delete-all.ts  display.ts  mark-all-as-read.ts  surveys-cli.ts
gradle/: libs.versions.toml
lib/: pawnote.dart
lib/src/: authenticate.dart
macros/: Cargo.toml
macros/src/: lib.rs
pawnote/: Cargo.toml  README.md
pawnote/examples/: hello.rs
pawnote/src/: lib.rs
pawnote/src/api/: mod.rs
pawnote/src/api/create_pronote_session/: mod.rs  request.rs  response.rs
pawnote/src/api/geolocate_instances_nearby/: mod.rs  request.rs  response.rs
pawnote/src/api/instance_information/: mod.rs  request.rs  response.rs
pawnote/src/api/instance_parameters/: mod.rs
pawnote/src/constants/: mod.rs  session_access_type.rs  web_space.rs  webspace.rs
pawnote/src/helpers/: deserializer.rs  mod.rs  pronote_url.rs
pawnote/src/models/: instance_information.rs  instance_nearby.rs  mod.rs  pronote_session.rs  session.rs  session_information.rs
pawnote/src/services/: geolocate_instances_nearby.rs  get_instance_information.rs  mod.rs
pawnote_ffi/: .gitignore  Cargo.toml  README.md  cbindgen.toml
pawnote_js/: CONTRIBUTING.md  Cargo.toml  README.md  index.d.ts  package.json  pnpm-lock.yaml
pawnote_js/examples/: hello.mts  hello.ts
pawnote_js/scripts/: build.mjs
pawnote_js/src/: lib.rs
pawnote_wasm/: Cargo.toml  README.md
pawnote_wasm/src/: lib.rs
src/: index.ts
src-old/: index.ts
src-old/api/: index.ts  type.ts
src-old/authenticate/: types.ts
src-old/client/: Pronote.ts
src-old/constants/: attendance.ts  (+9 more)
test/: index.ts
(+546 files in other folders)
