[package]
name = "pawnote-macros"
version.workspace = true
authors = ["Mikkel ALMONTE--RINGAUD <mikkel@milescode.dev> (https://github.com/Vexcited)"]
description = "A wrapper around Index-Education's PRONOTE internal API."
documentation = "https://docs.literate.ink/pawnote"
repository = "https://github.com/LiterateInk/Pawnote"
license-file.workspace = true
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.72"
