[package]
name = "pawnote"
version = "0.0.0"
authors = ["Mikkel ALMONTE--RINGAUD <mikkel@milescode.dev> (https://github.com/Vexcited)"]
description = "A wrapper around Index-Education's PRONOTE internal API."
documentation = "https://docs.literate.ink/pawnote"
repository = "https://github.com/LiterateInk/Pawnote"
license = "GPL-3.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
url = "2"
utilities = { git = "https://github.com/LiterateInk/Utilities" }
