[package]
name = "pawnote"
version.workspace = true
authors = ["Mikkel ALMONTE--RINGAUD <mikkel@milescode.dev> (https://github.com/Vexcited)"]
description = "A wrapper around Index-Education's PRONOTE internal API."
documentation = "https://docs.literate.ink/pawnote"
repository = "https://github.com/LiterateInk/Pawnote"
license-file.workspace = true
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
url = "2"
utilities = { git = "https://github.com/LiterateInk/Utilities" }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"
