[package]
name = "pawnote_wasm"
version = "0.0.0"
authors = ["Mikkel ALMONTE--RINGAUD <mikkel@milescode.dev>"]
description = "TODO"
documentation = "https://docs.literate.ink/pawnote"
edition = "2018"
repository = "https://github.com/LiterateInk/Pawnote"
rust-version = "1.31"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.63"
pawnote = { version = "0.0.0", path = "../pawnote" }
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
serde-wasm-bindgen = "0.4"
